--- a/DocDB/app/views/index.scala.html
+++ b/DocDB/app/views/index.scala.html
@@ -1,29 +1,23 @@
 @(message: String)
 
 @main("Welcome to DocDB") {
+
+
 <div class="container">
 
 	<div class="jumbotron">
 		<script>
-			 
-	
-			Dropzone.autoDiscover = false;
-			var tag = []
-			for (i = 0; i <= 2; i++) {				 
-				if( typeof localStorage[i] != 'undefined')
-					tag[i] = localStorage[i];
-				else
-					tag[i] = "file";
-				if( typeof localStorage["oldTags"] != 'undefined')
-					addTags(tag[i]);				
-			}
-			
+				Dropzone.autoDiscover = false;
+				var tag = []
+				for (i = 0; i <= 2; i++) {
+					if(!localStorage[i]=="")
+						tag[i] = localStorage[i];
+					else
+						tag[i] = "file";
+				}
+
 			$(function() {
-				var temp = localStorage["oldTags"];
-				var oldTagsArray = [];
-				var availableTags = [];
-					if(temp != null)
-						availableTags = temp.split(",");
+				var availableTags = [localStorage[0], localStorage[1], localStorage[2]];
 					$( "#0" ).autocomplete({
 					  source: availableTags
 					});
@@ -75,7 +69,7 @@
 		<div class="jumbotron">
 			<h2>Drop files via link</h2>
 				<div id="content3">
-					<input type="text" class="form-control" style=" margin: 0 auto;" id="link" placeholder="Put Your link here" onkeydown="checkKey('link');">
+					<input type="text" class="form-control" id="linkUpload" placeholder="Put Your link here">
 				</div>
 		</div>
 
@@ -95,6 +89,47 @@
 </div>
 
 <script>
+		function checkKey(tagID){
+			if (event.keyCode == 13) {
+				if(tagID == 'link'){
+					handleLink(tagID);
+					return false;
+				} else {
+					changeTag(tagID);
+					return false;
+				}
+			}
+		}
+		function changeTag(tagIDName){
+			var tag = document.getElementById(tagIDName).value;
+			var	tagID = document.getElementById(tagIDName);
+			tagID.value = tag;
+			localStorage[tagIDName] = tag;
+			location.reload();
+		}
+
+		function handleLink(tagIDName){
+			var link = document.getElementById(tagIDName).value;
+
+			sendLink(link);
+			return false;
+			/*console.log("witam");
+			$.ajax({
+			    url : "upload/",
+			    type: "POST",
+			    data : link,
+			    success: function(data, textStatus, jqXHR)
+			    {
+			        //data - response from server
+			    },
+			    error: function (jqXHR, textStatus, errorThrown)
+			    {
+			 
+			    }
+			});*/
+
+		}
+
 		Dropzone.options.dropzone1 = {
 			dictDefaultMessage: tag[0],
 			init: function() {
@@ -102,7 +137,7 @@
 					var temp = document.getElementById('geoLoc').innerHTML;
 					var arr = temp.split(",");
 					temp = tag[0].replace('#','');
-					arr.push(temp);	
+					arr.push(temp);
 					this.options.url = "upload/"+arr;
 				});
 			}
@@ -114,7 +149,7 @@
 					var temp = document.getElementById('geoLoc').innerHTML;
 					var arr = temp.split(",");
 					temp = tag[1].replace('#','');
-					arr.push(temp);	
+					arr.push(temp);
 					this.options.url = "upload/"+arr;
 
 				});
@@ -127,7 +162,7 @@
 					var temp = document.getElementById('geoLoc').innerHTML;
 					var arr = temp.split(",");
 					temp = tag[2].replace('#','');
-					arr.push(temp);	
+					arr.push(temp);
 					this.options.url = "upload/"+arr;
 				});
 			}
@@ -139,7 +174,7 @@
 			return function(val) {
 				return $sce.trustAsHtml(val);
 			};
-		});		
+		});
 	function searchController($scope){}
 </script>
 }
