links can be now uploaded and downloaded as html files. tag prompt while uploading (via ajax post)

--- a/DocDB/app/views/index.scala.html
+++ b/DocDB/app/views/index.scala.html
@@ -74,7 +74,7 @@
 		<div class="jumbotron">
 			<h2>Drop files via link</h2>
 				<div id="content3">
-					<input type="text" class="form-control" style=" margin: 0 auto;" id="link" placeholder="Put Your link here" onkeydown="checkKey('link');">
+					<input type="text" class="form-control" id="linkUpload" placeholder="Put Your link here">
 				</div>
 		</div>
 
