--- a/DocDB/app/views/index.scala.html
+++ b/DocDB/app/views/index.scala.html
@@ -23,7 +23,7 @@
 				else
 					tag[i] = "file";
 				if( localStorage["oldTags"] == "")
-					addTags(tag[i]);
+					addAutoComp(tag[i], 'oldTags');
 			}
 
 			$(function() {
