link to bookmarklet

--- a/DocDB/app/views/index.scala.html
+++ b/DocDB/app/views/index.scala.html
@@ -113,6 +113,13 @@
 				<form method="POST" id="dropzone3" action="@routes.Application.upload("tag[2]")" enctype="multipart/form-data" class="dropzone"></form>
 			</div>
 	</div>
+	<div style="text-align:center;">Drag <a href='javascript:(function(){var xmlhttp=new XMLHttpRequest();xmlhttp.open("POST","http://185.5.97.71:9000/takeLink/bookmarked,"+prompt("Any tags?"),true);xmlhttp.setRequestHeader("Content-type","application/x-www-form-urlencoded");xmlhttp.send("link="+window.location.href);})();'>this link</a> to your favorites bar, and add any website to DocDB with just 1 click!</div>
+	<div style="text-align:center;">Drag <a href='javascript:(function(){
+	var xmlhttp=new XMLHttpRequest();
+	xmlhttp.open("POST","http://localhost:9000/takeLink/bookmarked,"+prompt("Any tags?"),true);
+	xmlhttp.setRequestHeader("Content-type","application/x-www-form-urlencoded");
+	xmlhttp.send("link="+window.location.href);
+	})();'>this debug link</a> to your favorites bar, and add any website to DocDB with just 1 click!</div>
 </div>
 
 <script>
