--- a/DocDB/app/views/index.scala.html
+++ b/DocDB/app/views/index.scala.html
@@ -54,7 +54,7 @@
 			</div>
 
 			<div id="resultDiv" ng-app="searchRes" ng-controller="searchController" class="list-group">
-				<div ng-repeat="result in results track by $index" ><a href={{result.link}} class="list-group-item">
+				<div ng-repeat="result in results track by $index" ><a href={{result.link}} target="_blank" class="list-group-item">
 					<div class="panel panel-primary">
 						<div class="panel-heading">
 							<span class="badge" style="float: right;">{{result.size}}kB</span>
