--- a/DocDB/public/stylesheets/main.css
+++ b/DocDB/public/stylesheets/main.css
@@ -13,12 +13,22 @@ div #outer{
 	display: table;
 	text-align: center;
 }
+#resultDiv{
+	-ms-word-break: break-all;
+	word-break: break-all;
+	word-break: break-word;
+	-webkit-hyphens: auto;
+	-moz-hyphens: auto;
+	-ms-hyphens: auto;
+	hyphens: auto;
+}
+
  #resultDiv small{
 	margin-right: 4px;
 	cursor: alias;
  }
 
- .panel-title{
+ .gridView .panel-title{
 	 height:2em;
 	 overflow:hidden;
  }
